Complete Html structure with all section.

--- a/index.html
+++ b/index.html
@@ -26,5 +26,22 @@
         </div>
     </section>
     <!-- Section-1 Ends here -->
+    <!-- Section-2 -->
+    <section>
+        <div class="main-container">
+            <!-- left-side -->
+            <div>
+                <h1 class="heading-text">Be Focus and Productive</h1>
+                <p class="description">Not just an ordinary headphones. It's designed for meditation.</p>
+                <button class="btn">Learn More</button>
+            </div>
+            <!-- right-side -->
+            <div>
+                <img src="./images/img1.png" alt="image one">
+                <img src="./images/img2.png" alt="image two">
+                <img src="./images/img3.png" alt="image three">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
