--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Calm Project By Nishant</title>
 </head>
 <body>
@@ -30,13 +31,13 @@
     <section>
         <div class="main-container">
             <!-- left-side -->
-            <div>
+            <div class="left-content">
                 <h1 class="heading-text">Be Focus and Productive</h1>
                 <p class="description">Not just an ordinary headphones. It's designed for meditation.</p>
                 <button class="btn">Learn More</button>
             </div>
             <!-- right-side -->
-            <div>
+            <div class="model-img">
                 <img src="./images/img1.png" alt="image one">
                 <img src="./images/img2.png" alt="image two">
                 <img src="./images/img3.png" alt="image three">
